2023-08-25	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>

	Remove '${srcdir}' '${outdir}'.

2023-08-24	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>

	Optimize structure and import methods.

2023-08-08	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>

	Fix uninstall bug.

2023-07-28	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>

	Use C source code to get locale infomation.
	Support using Win32 API to get locale infomation on Native Windows.

2023-07-26	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>

	Add locale support.
	Add CMake macro 'cppp_nls_autotranslate'.

2023-07-25	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>

	Add NLS Util.
	Add C++ Plus CMake modules linker.
	Remove autoupdate GitHub CI.
	Add MSVC support.
	Add MSVC 'execution_character_set'.

2023-07-21	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>

	Fix ChangeLog datetime format.
	Replace `COPYING.LIB` to `COPYING` in files.

2023-07-3	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>

	Add C++ Plus dist utils

2023-06-29	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>

	Add ChangeLog.
	Remove autoconf buildsystem support.
	Update CMake scripts.